2008-07-27  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* doc/manual/libsocket.texi: no invariant sections for debian
	* doc/manual/libsocklib.texi: no invariant sections for debian
	* doc/manual/strsock.texi: no invariant sections for debian
	* m4/.cvsignore: more libtool files to ignore

2008-07-23  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strsock.refs: update references

2008-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strsock.refs: update references

2008-05-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* strsock.lsm.in: updates for release
	* strsock.spec.in: updates for release
	* debian/mscript_header.in: updates for release
	* debian/rules.in: updates for release
	* debian/strsock-core.postinst.in: updates for release
	* debian/strsock-core.postrm.in: updates for release
	* debian/strsock-core.preinst.in: updates for release
	* debian/strsock-core.prerm.in: updates for release
	* debian/strsock-init.postinst.in: updates for release
	* debian/strsock-init.preinst.in: updates for release

2008-05-03  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* doc/papers/.cvsignore: addition

	* doc/manual/prerequisites.texi: added strx25 sub-package

2008-04-28  Brian Bidulock  <bidulock@openss7.org>

	* strsock.spec.in: updates for release
	* doc/man/strsock.refs: updates for release

2008-04-25  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strsock.refs: udpated references

	* doc/manual/libsocket.texi: updates to AGPLv3
	* doc/manual/libsocklib.texi: updates to AGPLv3